# why2025-badge-rust

./: .gitmodules  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: badgevms-std-conformance.yml  badgevms-std-toolchain.yml  ci.yml
docs/adr/: 0001-app-owned-badge-linking.md  0002-ctype-export-normalization.md  0003-use-dlsym-for-host-libc-overlap.md  0004-badgevms-std-toolchain-boundary.md  0004-canonical-badgevms-abi-layering.md  0005-support-badgevms-std-through-the-superproject.md  0006-implement-badgevms-std-as-a-built-in-rust-target.md  0007-use-github-pages-rustup-dist-for-badgevms-std.md  0008-make-badgevms-the-primary-no-std-target.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/badgevms-std-target/: conformance-protocol.md  getting-started.md  host-emulation-separation.md  implementation-map.md  index.md  networking.md  paths-and-io.md  process-model.md  support-matrix.md  testing.md  threading-model.md  toolchain-metadata.example.toml  unsupported-policy.md
docs/prd/: badgevms-std-target.md
embedded-graphics-why2025-badge/: Cargo.toml  README.md
embedded-graphics-why2025-badge/src/: lib.rs
examples/graphics-demo/: Cargo.toml  Readme.adoc
examples/graphics-demo/src/: build_script.rs  main.rs
examples/hello-world/: Cargo.toml  Readme.adoc  build.rs
examples/hello-world-no_std/: Cargo.toml  Readme.adoc
examples/hello-world-no_std-none-elf/: Cargo.toml  Readme.adoc
examples/hello-world-no_std-none-elf-manual-linking/: Cargo.toml  Readme.adoc  build.rs
examples/hello-world-no_std-none-elf-manual-linking/src/: main.rs
examples/hello-world-no_std-none-elf/src/: main.rs
examples/hello-world/src/: main.rs
examples/mousefood-demo/: Cargo.toml  Readme.adoc  build.rs
examples/mousefood-demo/src/: main.rs
examples/ocpncord-demo/: Cargo.toml
examples/ocpncord-demo/src/: input.rs  main.rs
examples/ratatui-demo/: Cargo.toml  Readme.adoc  build.rs
examples/ratatui-demo/src/: app.rs  main.rs  ui.rs
examples/std-fs-demo/: Cargo.toml  Readme.adoc
examples/std-fs-demo/src/: main.rs
examples/std-hello-world/: Cargo.toml  Readme.adoc
examples/std-hello-world/src/: main.rs
examples/std-mousefood-demo/: Cargo.toml  Readme.adoc
examples/std-mousefood-demo/src/: main.rs
examples/std-process-demo/: Cargo.toml  Readme.adoc
examples/std-process-demo/src/: main.rs
examples/std-ratatui-demo/: Cargo.toml  Readme.adoc
examples/std-ratatui-demo/src/: app.rs  main.rs  ui.rs
examples/std-tcp-demo/: Cargo.toml  Readme.adoc
examples/std-tcp-demo/src/: main.rs
examples/std-threaded-app/: Cargo.toml  Readme.adoc
examples/std-threaded-app/src/: main.rs
examples/std-unsupported-demo/: Cargo.toml  Readme.adoc
examples/std-unsupported-demo/src/: main.rs
tests/badgevms-std/: README.md  conformance.toml
tools/badgevms-std/: README.md  build-toolchain.sh  ci-smoke.sh  common-stage2-path.sh  common.sh  dev-link-stage2.sh  dist-toolchain.sh  inspect-elf.sh  install-toolchain.sh  install.sh  link-toolchain.sh  package-toolchain.sh  riscv32imafc-unknown-badgevms.json  run-smoke.sh  upstream-patch-map.md  verify-toolchain.sh
tools/badgevms-std/checks/: ci-smoke.sh  inspect-elf.sh  run-dist-smoke.sh  run-smoke.sh  verify-toolchain.sh
tools/emu-abi/checks/: inspect-exports.sh  report-symbol-coverage.sh
why2025-badge/: Cargo.toml
why2025-badge-app-no-std/: Cargo.toml  build.rs
why2025-badge-app-no-std/src/: lib.rs
why2025-badge-build/: Cargo.toml
why2025-badge-build/src/: lib.rs
why2025-badge-embedded-graphics/: Cargo.toml  README.md
why2025-badge-embedded-graphics/src/: lib.rs
why2025-badge-embedded-nal-async/: Cargo.toml
why2025-badge-embedded-nal-async/src/: lib.rs
why2025-badge-emu-abi/: Cargo.toml  README.md  build.rs  full-missing-symbol-report.txt
why2025-badge-emu-abi/src/: allocator.rs  deferred.rs  fs.rs  host_forward.rs  lib.rs  libc_compat.rs  libc_fallback.rs  misc.rs  ota.rs  runtime.rs  wifi.rs
why2025-badge-emu-abi/src/fs/: paths.rs
why2025-badge-emu-abi/src/graphics/: input.rs  mod.rs  rendering.rs  x11.rs
why2025-badge-emu-abi/src/misc/: paths.rs  runtime.rs
why2025-badge-emu-abi/src/ota/: runtime.rs
why2025-badge-metadata/: Cargo.toml
why2025-badge-metadata/src/: lib.rs
why2025-badge-sys/: Cargo.toml  README.md  depfile.txt  lib.rs.template  rebuild-bindings.sh
why2025-badge-sys-bindings/: .gitignore  Cargo.toml  README.md  rebuild-bindings.sh
why2025-badge-sys-bindings/extra-headers/: missing.h
why2025-badge-sys-bindings/src/: lib.rs  types.rs
why2025-badge-sys/docs/: libc-dlsym-rollout.md
why2025-badge-sys/docs/adr/: 0001-ctype-export-normalization.md  0002-use-dlsym-for-host-libc-overlap.md
why2025-badge-sys/extra-headers/: gcc-builtins.h  missing.h  sdkconfig.h
why2025-badge-sys/src/: bindings.rs  build_script.rs  emulated.rs  lib.rs  linker_test.rs  missing_symbols.rs  types.rs
why2025-badge-sys/src/emulated/: badgevms.rs  libc_fallback.rs  riscv.rs  wrapped_libc.rs
why2025-badge-sys/src/emulated/badgevms/: applications.rs  curl.rs  fs.rs  graphics.rs  misc.rs  ota.rs  wifi.rs
why2025-badge-sys/src/emulated/badgevms/applications/: runtime.rs
why2025-badge-sys/src/emulated/badgevms/curl/: runtime.rs
why2025-badge-sys/src/emulated/badgevms/fs/: paths.rs
why2025-badge-sys/src/emulated/badgevms/graphics/: input.rs  rendering.rs
why2025-badge-sys/src/emulated/badgevms/misc/: runtime.rs
why2025-badge-sys/src/emulated/badgevms/ota/: runtime.rs
why2025-badge-sys/src/emulated/badgevms/wifi/: runtime.rs
why2025-badge-sys/src/emulated/libc_fallback/: runtime.rs
why2025-badge-sys/src/emulated/wrapped_libc/: runtime.rs
why2025-badge/src/: lib.rs  malloc.rs  stdio.rs
