[workspace]
resolver = "3"
members = [
    "examples/hello-world",
    "examples/graphics-demo",
    "examples/mousefood-demo",
    "examples/ratatui-demo",
    "why2025-badge-embedded-graphics",
    "why2025-badge-sys",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Zebreus"]
license = "AGPL-3.0"
description = "Various support packages for using rust on the WHY2025 badge"
repository = "https://github.com/zebreus/why2025-badge-rust"

[profile.release]
panic = 'abort'
lto = "fat"

[profile.dev]
panic = 'abort'
lto = "thin"

[workspace.dependencies]
why2025-badge-sys = { path = "why2025-badge-sys", version = "0.2.0" }
why2025-badge-embedded-graphics = { path = "why2025-badge-embedded-graphics", version = "0.2.0" }
embedded-graphics = "0.8.1"
mousefood = { git = "https://github.com/j-g00da/mousefood.git", default-features = false, features = [
    "fonts",
] }
ratatui-core = { version = "0.1.0-alpha.6", features = ["underline-color"] }
embedded-graphics-unicodefonts = "0.1.0"
ratatui = { version = "0.30.0-alpha.5", default-features = false }
spin = "0.10.0"
talc = "4.4.2"
rand = { version = "0.9.2", features = ["small_rng"], default-features = false }
