[package]
name = "why2025-badge-app-no-std"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "App-facing runtime and entry glue for building WHY2025 badge Apps across BadgeVMS and Emulation"
keywords = ["why2025", "badge"]
categories = ["embedded", "no-std", "os"]

[features]
default = ["provided-runtime"]
provided-runtime = ["provided-allocator", "provided-panic-handler"]
provided-allocator = ["dep:spin", "dep:talc"]
provided-panic-handler = []

[dependencies]
spin = { workspace = true, optional = true }
talc = { workspace = true, optional = true }
why2025-badge-sys = { workspace = true }
