[package]
name = "why2025-badge-build"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Compatibility build-script helper for WHY2025 badge apps that don't use our toolchain"
keywords = ["why2025", "badge"]
categories = ["development-tools::build-utils", "embedded", "no-std", "os"]

[dependencies]
