[package]
name = "why2025-badge-embedded-graphics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["why2025", "badge"]
categories = ["embedded", "no-std", "os", "graphics"]

[dependencies]
embedded-graphics.workspace = true
why2025-badge-sys.workspace = true
