[package]
name = "why2025-badge-emu-abi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Experimental no_std Linux host implementation of BadgeVMS ABI exports"
repository.workspace = true
keywords = ["why2025", "badge", "emulator", "abi"]
categories = ["embedded", "no-std", "os"]
build = "build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
graphics = []
networking = []
wifi = []

[dependencies]
why2025-badge-sys-bindings.workspace = true
libc = { version = "0.2", default-features = false }
raw-window-handle = { version = "0.6", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
spin.workspace = true
x11-dl = { package = "why2025-badge-x11-dl", path = "../why2025-badge-x11-rs/x11-dl", version = "2.21.0", default-features = false }
