[package]
name = "why2025-badge-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Bindings to the built-in functions of the WHY2025 badge"
repository.workspace = true
keywords = ["why2025", "badge"]
categories = ["embedded", "no-std", "os", "graphics"]

[dependencies]
