[package]
name = "why2025-badge-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Bindings to the built-in functions of the WHY2025 badge"
repository.workspace = true
keywords = ["why2025", "badge"]
categories = ["embedded", "no-std", "os", "graphics"]
build = "src/build_script.rs"
links = "why2025_badge_sys"

[features]
default = []
badge-app-link = []

[dependencies]

[target.'cfg(not(target_arch = "riscv32"))'.dependencies]
libc = { version = "0.2", default-features = false }
minifb = { version = "0.28", default-features = false, features = ["x11"] }
x11-dl = { version = "2.19.1" }
raw-window-handle = "0.6"
http-auth = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
