[package]
version.workspace = true
name = "graphics-demo"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["why2025", "badge"]
categories = ["embedded", "no-std", "os"]

[dependencies]
why2025-badge-sys.workspace = true
why2025-badge-embedded-graphics.workspace = true
embedded-graphics.workspace = true
