[package]
version.workspace = true
name = "graphics-demo"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["why2025", "badge"]
categories = ["embedded", "no-std", "os"]
build = "src/build_script.rs"

[dependencies]
why2025-badge-sys = { workspace = true, features = ["badge-app-link"] }
why2025-badge-embedded-graphics.workspace = true
embedded-graphics.workspace = true
talc.workspace = true
spin.workspace = true

[build-dependencies]
why2025-badge-build.workspace = true
