[package]
version.workspace = true
name = "graphics-demo"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["why2025", "badge"]
categories = ["embedded", "no-std", "os"]
build = "src/build_script.rs"

[dependencies]
why2025-badge-app-no-std.workspace = true
why2025-badge-embedded-graphics.workspace = true
embedded-graphics.workspace = true

[build-dependencies]
why2025-badge-app-no-std = { path = "../../why2025-badge-app-no-std", default-features = false }
