[package]
version.workspace = true
name = "mousefood-demo"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["why2025", "badge"]
categories = ["embedded", "no-std", "os"]

[dependencies]
why2025-badge-app-no-std.workspace = true
why2025-badge-embedded-graphics.workspace = true
embedded-graphics.workspace = true
mousefood.workspace = true
ratatui-core.workspace = true
embedded-graphics-unicodefonts.workspace = true
ratatui.workspace = true
