[package]
version.workspace = true
name = "ratatui-demo"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["why2025", "badge"]
categories = ["embedded", "no-std", "os"]

[dependencies]
why2025-badge-sys.workspace = true
why2025-badge-embedded-graphics.workspace = true
embedded-graphics.workspace = true
mousefood.workspace = true
ratatui-core.workspace = true
embedded-graphics-unicodefonts.workspace = true
ratatui.workspace = true
talc.workspace = true
spin.workspace = true
rand.workspace = true
