[package]
name = "std-ratatui-demo"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
why2025-badge-embedded-graphics = { path = "../../why2025-badge-embedded-graphics", version = "0.2.0" }
embedded-graphics = "=0.8.2"
embedded-graphics-unicodefonts = "=0.2.0"
mousefood = { version = "=0.5.0", default-features = false, features = [
    "fonts",
] }
ratatui = { version = "=0.30.0", default-features = false }
rand = { version = "=0.9.2", features = [
    "small_rng",
], default-features = false }

[target.'cfg(not(target_arch = "riscv32"))'.dependencies]
why2025-badge-emu-abi = { path = "../../why2025-badge-emu-abi", version = "0.2.0" }
